--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div id="awnser1" class="awnser" onclick="select(awnser1,0)" >resposta1</div>
             <div id="awnser2" class="awnser" onclick="select(awnser2,1)">resposta2</div>
             <div id="awnser3" class="awnser" onclick="select(awnser3,2)">resposta3</div>
+            <div id="awnser4" class="awnser" onclick="select(awnser4,3)">resposta4</div>
+            <div id="awnser5" class="awnser" onclick="select(awnser5,4)">resposta5</div>
         </div>
         <div id="next" class="next" onclick="check()">Proxima</div>
     </div>
