--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Quiz</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7507238.js"></script>
 </head>
 <body>
     <div class="container">
