Adding wining gif

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7507238.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="container">
         <h1 id="quiz-title">Quiz</h1>
         <div id="question" class="question">pergunta pergunta pergunta pergunta pergunta?</div>
 
