--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,15 +9,16 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7507238.js"></script>
 </head>
+
 <body>
     <div id="container" class="container">
         <h1 id="quiz-title">Quiz</h1>
         <div id="question" class="question">pergunta pergunta pergunta pergunta pergunta?</div>
 
-        <div class="form" id="form"> 
-            <input id="name" class="input" placeholder="Nome"/>
-            <input id="email" type="email" class="input" placeholder="Email"/>
-            <input id="phone" class="input" placeholder="Telefone (com DDD)"/>
+        <div class="form" id="form">
+            <input id="name" class="input" placeholder="Nome" />
+            <input id="email" type="email" class="input" placeholder="Email" />
+            <input id="phone" class="input" placeholder="Telefone (com DDD)" />
             <select id="role" name="role" class="role">
                 <option value="Coodernador">Coodernador</option>
                 <option value="Professor">Professor</option>
@@ -31,15 +33,21 @@
         </div>
 
         <div id="awnsers" class="awnsers">
-            <div id="awnser1" class="awnser" onclick="select(awnser1,0)" >resposta1</div>
+            <div id="awnser1" class="awnser" onclick="select(awnser1,0)">resposta1</div>
             <div id="awnser2" class="awnser" onclick="select(awnser2,1)">resposta2</div>
             <div id="awnser3" class="awnser" onclick="select(awnser3,2)">resposta3</div>
             <div id="awnser4" class="awnser" onclick="select(awnser4,3)">resposta4</div>
             <div id="awnser5" class="awnser" onclick="select(awnser5,4)">resposta5</div>
         </div>
-        
+
         <div id="next" class="next" onclick="check()">Proxima</div>
+
+
+        <video id="video" class="video" autoplay muted>
+            <source src="videos/win.mp4" type="video/mp4">
+        </video>
     </div>
 </body>
 <script src='js/main.js'></script>
+
 </html>
