--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
         <h1 id="quiz-title">Quiz</h1>
         <div id="question" class="question">pergunta pergunta pergunta pergunta pergunta?</div>
 
-        <div class="form" id="form">
-            <input id="name" class="input" placeholder="Nome" />
-            <input id="email" type="email" class="input" placeholder="Email" />
-            <input id="phone" class="input" placeholder="Telefone (com DDD)" />
-            <select id="role" name="role" class="role">
-                <option value="Coodernador">Coodernador</option>
-                <option value="Professor">Professor</option>
-                <option value="Aluno">Aluno</option>
-            </select>
-            <div id="send" class="send" onclick="submit()">Começar</div>
-        </div>
+        <form>
+            <div class="form" id="form">
+                <input id="name" class="input" placeholder="Nome" />
+                <input id="email" type="email" class="input" placeholder="Email" />
+                <input id="phone" class="input" placeholder="Telefone (com DDD)" />
+                <select id="role" name="role" class="role">
+                    <option value="Coodernador">Coodernador</option>
+                    <option value="Professor">Professor</option>
+                    <option value="Aluno">Aluno</option>
+                </select>
+                <div id="send" class="send" onclick="submit()">Começar</div>
+            </div>
+        </form>
 
         <div id="option" class="option">
             <div id="yes" class="sure" onclick="handleYes()">Claro</div>
